Fixed #281 Room attributes in admin
Done. Made an attempt at items too, but it's more difficult. Items needs more work.